basic flow completed
