# src/lib/api/models/CreateReservationRequest.ts
@@ -1,0 +1,127 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Venuely Booking Widget Api
+ * Api collection for making a booking
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface CreateReservationRequest
+ */
+export interface CreateReservationRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateReservationRequest
+     */
+    venueId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateReservationRequest
+     */
+    venueName: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateReservationRequest
+     */
+    staffId: string;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof CreateReservationRequest
+     */
+    serviceIds: Array<string>;
+    /**
+     * 
+     * @type {Date}
+     * @memberof CreateReservationRequest
+     */
+    startDate: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof CreateReservationRequest
+     */
+    endDate: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateReservationRequest
+     */
+    guestName?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateReservationRequest
+     */
+    guestNotes?: string;
+}
+
+/**
+ * Check if a given object implements the CreateReservationRequest interface.
+ */
+export function instanceOfCreateReservationRequest(value: object): value is CreateReservationRequest {
+    if (!('venueId' in value) || value['venueId'] === undefined) return false;
+    if (!('venueName' in value) || value['venueName'] === undefined) return false;
+    if (!('staffId' in value) || value['staffId'] === undefined) return false;
+    if (!('serviceIds' in value) || value['serviceIds'] === undefined) return false;
+    if (!('startDate' in value) || value['startDate'] === undefined) return false;
+    if (!('endDate' in value) || value['endDate'] === undefined) return false;
+    return true;
+}
+
+export function CreateReservationRequestFromJSON(json: any): CreateReservationRequest {
+    return CreateReservationRequestFromJSONTyped(json, false);
+}
+
+export function CreateReservationRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateReservationRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'venueId': json['venue_id'],
+        'venueName': json['venue_name'],
+        'staffId': json['staff_id'],
+        'serviceIds': json['service_ids'],
+        'startDate': (new Date(json['start_date'])),
+        'endDate': (new Date(json['end_date'])),
+        'guestName': json['guest_name'] == null ? undefined : json['guest_name'],
+        'guestNotes': json['guest_notes'] == null ? undefined : json['guest_notes'],
+    };
+}
+
+export function CreateReservationRequestToJSON(json: any): CreateReservationRequest {
+    return CreateReservationRequestToJSONTyped(json, false);
+}
+
+export function CreateReservationRequestToJSONTyped(value?: CreateReservationRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'venue_id': value['venueId'],
+        'venue_name': value['venueName'],
+        'staff_id': value['staffId'],
+        'service_ids': value['serviceIds'],
+        'start_date': ((value['startDate']).toISOString()),
+        'end_date': ((value['endDate']).toISOString()),
+        'guest_name': value['guestName'],
+        'guest_notes': value['guestNotes'],
+    };
+}
+
