# src/lib/api/models/Service.ts
@@ -1,0 +1,111 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Venuely Booking Widget Api
+ * Api collection for making a booking
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Service
+ */
+export interface Service {
+    /**
+     * The id of the service
+     * @type {string}
+     * @memberof Service
+     */
+    serviceId: string;
+    /**
+     * The name of the service
+     * @type {string}
+     * @memberof Service
+     */
+    title: string;
+    /**
+     * The amount for the service
+     * @type {number}
+     * @memberof Service
+     */
+    amount?: number;
+    /**
+     * The gender for which the service is provided
+     * @type {string}
+     * @memberof Service
+     */
+    gender?: ServiceGenderEnum;
+    /**
+     * The time required to finish the service
+     * @type {number}
+     * @memberof Service
+     */
+    durationInMinutes?: number;
+}
+
+
+/**
+ * @export
+ */
+export const ServiceGenderEnum = {
+    Male: 'male',
+    Female: 'female',
+    Unisex: 'unisex'
+} as const;
+export type ServiceGenderEnum = typeof ServiceGenderEnum[keyof typeof ServiceGenderEnum];
+
+
+/**
+ * Check if a given object implements the Service interface.
+ */
+export function instanceOfService(value: object): value is Service {
+    if (!('serviceId' in value) || value['serviceId'] === undefined) return false;
+    if (!('title' in value) || value['title'] === undefined) return false;
+    return true;
+}
+
+export function ServiceFromJSON(json: any): Service {
+    return ServiceFromJSONTyped(json, false);
+}
+
+export function ServiceFromJSONTyped(json: any, ignoreDiscriminator: boolean): Service {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'serviceId': json['service_id'],
+        'title': json['title'],
+        'amount': json['amount'] == null ? undefined : json['amount'],
+        'gender': json['gender'] == null ? undefined : json['gender'],
+        'durationInMinutes': json['duration_in_minutes'] == null ? undefined : json['duration_in_minutes'],
+    };
+}
+
+export function ServiceToJSON(json: any): Service {
+    return ServiceToJSONTyped(json, false);
+}
+
+export function ServiceToJSONTyped(value?: Service | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'service_id': value['serviceId'],
+        'title': value['title'],
+        'amount': value['amount'],
+        'gender': value['gender'],
+        'duration_in_minutes': value['durationInMinutes'],
+    };
+}
+
