# src/lib/api/models/TimeSlot.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Venuely Booking Widget Api
+ * Api collection for making a booking
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface TimeSlot
+ */
+export interface TimeSlot {
+    /**
+     * The start date of the time slot
+     * @type {Date}
+     * @memberof TimeSlot
+     */
+    start: Date;
+    /**
+     * The end date of the time slot
+     * @type {Date}
+     * @memberof TimeSlot
+     */
+    end: Date;
+}
+
+/**
+ * Check if a given object implements the TimeSlot interface.
+ */
+export function instanceOfTimeSlot(value: object): value is TimeSlot {
+    if (!('start' in value) || value['start'] === undefined) return false;
+    if (!('end' in value) || value['end'] === undefined) return false;
+    return true;
+}
+
+export function TimeSlotFromJSON(json: any): TimeSlot {
+    return TimeSlotFromJSONTyped(json, false);
+}
+
+export function TimeSlotFromJSONTyped(json: any, ignoreDiscriminator: boolean): TimeSlot {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'start': (new Date(json['start'])),
+        'end': (new Date(json['end'])),
+    };
+}
+
+export function TimeSlotToJSON(json: any): TimeSlot {
+    return TimeSlotToJSONTyped(json, false);
+}
+
+export function TimeSlotToJSONTyped(value?: TimeSlot | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'start': ((value['start']).toISOString()),
+        'end': ((value['end']).toISOString()),
+    };
+}
+
