# src/lib/api/models/index.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export * from './CreateReservationRequest';
+export * from './Service';
+export * from './TimeSlot';
+export * from './TimeSlotProvider';
+export * from './Venue';
